--- a/output/index.html
+++ b/output/index.html
@@ -153,7 +153,7 @@ into the {body} of the default.hbs template -->
     <article class="post-card home-template">
         
             <a class="post-card-image-link" href="/Azure-database">
-                <div class="post-card-image" style="background-image: url(/assets/images/bear.jpg)"></div>
+                <div class="post-card-image" style="background-image: url(/assets/images/azure-azure-logo.png)"></div>
             </a>
         
         <div class="post-card-content">
