--- a/output/404.html
+++ b/output/404.html
@@ -113,7 +113,7 @@ It's a good idea to keep this template as minimal as possible in terms of both f
         <article class="post-card ">
             
                 <a class="post-card-image-link" href="/Azure-database">
-                    <div class="post-card-image" style="background-image: url(/assets/images/bear.jpg)"></div>
+                    <div class="post-card-image" style="background-image: url(/assets/images/azure-azure-logo.png)"></div>
                 </a>
             
             <div class="post-card-content">
