--- a/output/welcome.html
+++ b/output/welcome.html
@@ -363,7 +363,7 @@ into the {body} of the default.hbs template -->
     <article class="post-card post-template">
         
             <a class="post-card-image-link" href="/Azure-database">
-                <div class="post-card-image" style="background-image: url(/assets/images/bear.jpg)"></div>
+                <div class="post-card-image" style="background-image: url(/assets/images/azure-azure-logo.png)"></div>
             </a>
         
         <div class="post-card-content">
