--- a/output/gettysburg-address.html
+++ b/output/gettysburg-address.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/built/syntax.css" />
     <!-- highlight.js -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+
+    <!-- Web Font Setting -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/nanumgothic.css">
+
     <style>.hljs { background: none; }</style>
 
     <!--[if IE]>
@@ -32,7 +36,7 @@
             }
         </style>
     <![endif]-->
-    
+
     <!-- This tag outputs SEO meta+structured data and other important settings -->
     <meta name="description" content="IT기반기술교육 블로그" />
     <link rel="shortcut icon" href="http://localhost:4000/assets/images/favicon.jpg" type="image/png" />
